[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/Voxel-Core/engine/BottomPanel/VoxelLayersView/VoxelLayerView/VoxelLayerView.gd" type="Script" id=1]
[ext_resource path="res://addons/Voxel-Core/assets/BottomPanel/cancel.png" type="Texture" id=2]
[ext_resource path="res://addons/Voxel-Core/assets/BottomPanel/confirm.png" type="Texture" id=3]
[ext_resource path="res://addons/Voxel-Core/assets/BottomPanel/visible.png" type="Texture" id=4]
[ext_resource path="res://addons/Voxel-Core/assets/BottomPanel/up.png" type="Texture" id=5]
[ext_resource path="res://addons/Voxel-Core/assets/BottomPanel/down.png" type="Texture" id=6]
[ext_resource path="res://addons/Voxel-Core/assets/BottomPanel/sub.png" type="Texture" id=7]

[node name="VoxelLayerView" type="PanelContainer"]
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 2
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="PanelContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="PanelContainer"]
margin_top = 6.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="NameEdit" type="HBoxContainer" parent="PanelContainer"]
visible = false
margin_left = 80.0
margin_right = 170.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="Name" type="LineEdit" parent="PanelContainer/NameEdit"]
margin_right = 58.0
margin_bottom = 26.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Layer name..."

[node name="Cancel" type="Button" parent="PanelContainer/NameEdit"]
margin_left = 78.0
margin_right = 106.0
margin_bottom = 26.0
hint_tooltip = "Cancel"
icon = ExtResource( 2 )

[node name="Rename" type="Button" parent="PanelContainer/NameEdit"]
margin_left = 62.0
margin_right = 74.0
margin_bottom = 26.0
hint_tooltip = "Rename"
icon = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 4.0
margin_right = 128.0
margin_bottom = 26.0

[node name="Visible" type="ToolButton" parent="PanelContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 26.0
hint_tooltip = "Toggle"
icon = ExtResource( 4 )

[node name="MoveUp" type="ToolButton" parent="PanelContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 26.0
hint_tooltip = "Move Up"
icon = ExtResource( 5 )

[node name="MoveDown" type="ToolButton" parent="PanelContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 26.0
hint_tooltip = "Move Down"
icon = ExtResource( 6 )

[node name="Remove" type="ToolButton" parent="PanelContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 124.0
margin_bottom = 26.0
hint_tooltip = "Remove"
icon = ExtResource( 7 )
[connection signal="gui_input" from="PanelContainer/Name" to="." method="_on_Name_gui_input"]
[connection signal="text_entered" from="PanelContainer/NameEdit/Name" to="." method="rename"]
[connection signal="pressed" from="PanelContainer/NameEdit/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="PanelContainer/NameEdit/Rename" to="." method="_on_Rename_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Visible" to="." method="_on_Visible_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MoveUp" to="." method="_on_MoveUp_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MoveDown" to="." method="_on_MoveDown_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
